Ajout de la page des informations de personnage (part 1)

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -27,6 +27,20 @@
     font-style: italic;
 }
 
+.separation {
+    padding: 0.2em 0;
+    border-top: 1px solid #323232;
+    border-bottom: 1px solid #323232;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.italic {
+    font-style: italic;
+}
+
 .errormsg {
     color: #DF0000;
 }
