--- a/src/Components/organisms/CharactersViews/CharactersViews.css
+++ b/src/Components/organisms/CharactersViews/CharactersViews.css
@@ -6,9 +6,12 @@
 }
 
 .charactersViews {
+    height: 74dvh;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 5px;
     margin: 0.4rem 0;
+    border-radius: 10px;
+    overflow-y: auto;
 }
